--- a/less/index.less
+++ b/less/index.less
@@ -352,22 +352,9 @@ main {
   .head {
     .display(space-around, flex-start);
   }
-  .data1 {
+  .data {
     .display(space-around, lex-start);
     background: #f4f4f4;
-  }
-
-  .data2 {
-    .display(space-around, flex-start);
-  }
-
-  .data3 {
-    .display(space-around, flex-start);
-    background: #f4f4f4;
-  }
-
-  .data4 {
-    .display(space-around, flex-start);
   }
 
   @media (max-width: 500px) {
